--- a/qof/po/cs.po
+++ b/qof/po/cs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-05-08 10:10+0100\n"
+"POT-Creation-Date: 2009-05-07 22:44+0100\n"
 "PO-Revision-Date: 2009-05-16 22:40+0200\n"
 "Last-Translator: Tomas Fidler <tomas.fidler@tiscali.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
@@ -33,8 +33,14 @@ msgstr "Byla nalezena syntaktická chyba v souboru '%s'."
 #: backend/file/qsf-xml-map.c:265 backend/file/qsf-xml.c:271
 #: backend/file/qsf-xml.c:330
 #, c-format
-msgid "Invalid QSF Object file! The QSF object file '%s'  failed to validate  against the QSF object schema. The XML structure of the file is either not well-formed or the file contains illegal data."
-msgstr "Neplatný soubor objektu QSF! Soubor objektu QSF '%s' nelze ověřit vůči schématu objektu QSF. Struktura XML souboru není správně utvořená nebo soubor obsahuje nepřípustná data."
+msgid ""
+"Invalid QSF Object file! The QSF object file '%s'  failed to validate  "
+"against the QSF object schema. The XML structure of the file is either not "
+"well-formed or the file contains illegal data."
+msgstr ""
+"Neplatný soubor objektu QSF! Soubor objektu QSF '%s' nelze ověřit vůči "
+"schématu objektu QSF. Struktura XML souboru není správně utvořená nebo "
+"soubor obsahuje nepřípustná data."
 
 #: backend/file/qsf-xml-map.c:274
 #, c-format
@@ -42,65 +48,110 @@ msgid "The QSF map file '%s' could not be found."
 msgstr "Soubor mapy QSF '%s' nelze najít"
 
 #: backend/file/qsf-xml-map.c:347
-msgid "Invalid QSF Map file! The QSF map file failed to validate against the QSF map schema. The XML structure of the file is either not well-formed or the file contains illegal data."
-msgstr "Neplatný soubor mapy QSF! Soubor mapy QSF nelze ověřit vůči schématu mapy QSF. Struktura XML souboru není správně utvořená nebo soubor obsahuje nepřípustná data."
+msgid ""
+"Invalid QSF Map file! The QSF map file failed to validate against the QSF "
+"map schema. The XML structure of the file is either not well-formed or the "
+"file contains illegal data."
+msgstr ""
+"Neplatný soubor mapy QSF! Soubor mapy QSF nelze ověřit vůči schématu mapy "
+"QSF. Struktura XML souboru není správně utvořená nebo soubor obsahuje "
+"nepřípustná data."
 
 #: backend/file/qsf-xml-map.c:419
 #, c-format
-msgid "The selected QSF map '%s' contains unusable or missing data. This is usually because not all the required parameters for the defined objects have calculations described in the map."
-msgstr "Vybraná QSF mapa '%s' obsahuje nepoužitelná nebo chybějící data. To je obvykle protože ne všechny požadované parametry definovaných objektů mají v mapě popsané výpočty."
+msgid ""
+"The selected QSF map '%s' contains unusable or missing data. This is usually "
+"because not all the required parameters for the defined objects have "
+"calculations described in the map."
+msgstr ""
+"Vybraná QSF mapa '%s' obsahuje nepoužitelná nebo chybějící data. To je "
+"obvykle protože ne všechny požadované parametry definovaných objektů mají v "
+"mapě popsané výpočty."
 
 #: backend/file/qsf-xml-map.c:513
 #, c-format
-msgid "The QSF Map file '%s' was written for a different version of QOF. It may need to be modified to work with your current QOF installation."
-msgstr "Soubor QSF map '%s' byl napsán pro jinou verzy QOF. Možná bude potřeba jej upravit, aby fungoval s vaší instalací QOF."
+msgid ""
+"The QSF Map file '%s' was written for a different version of QOF. It may "
+"need to be modified to work with your current QOF installation."
+msgstr ""
+"Soubor QSF map '%s' byl napsán pro jinou verzy QOF. Možná bude potřeba jej "
+"upravit, aby fungoval s vaší instalací QOF."
 
 #: backend/file/qsf-backend.c:118
 msgid "Level of compression to use: 0 for none, 9 for highest."
 msgstr "Úroveň komprese: 0 pro žádnou, í pro nejvyšší."
 
 #: backend/file/qsf-backend.c:120
-msgid "QOF can compress QSF XML files using gzip. Note that compression is not used when outputting to STDOUT."
-msgstr "QOF může komprimovat XML soubory QSF pomocí gzip. Koḿprese se nepoužívá při výstupu na STDOUT."
+msgid ""
+"QOF can compress QSF XML files using gzip. Note that compression is not used "
+"when outputting to STDOUT."
+msgstr ""
+"QOF může komprimovat XML soubory QSF pomocí gzip. Koḿprese se nepoužívá při "
+"výstupu na STDOUT."
 
 #: backend/file/qsf-backend.c:130
 msgid "List of QSF map files to use for this session."
 msgstr "Seznam souborů map QSF, které používat pro toto sezení."
 
 #: backend/file/qsf-backend.c:132
-msgid "QOF can convert objects within QSF XML files using a map of the changes required."
-msgstr "QOF může převádět objekty v XML souborech QSF pomocí mapy požadovaných změn."
+msgid ""
+"QOF can convert objects within QSF XML files using a map of the changes "
+"required."
+msgstr ""
+"QOF může převádět objekty v XML souborech QSF pomocí mapy požadovaných změn."
 
 #: backend/file/qsf-backend.c:141
 msgid "Encoding string to use when writing the XML file."
 msgstr "Kódování řetězců, které používat při zápisu souboru XML."
 
 #: backend/file/qsf-backend.c:143
-msgid "QSF defaults to UTF-8. Other encodings are supported by passing the encoding string in this option."
-msgstr "QSF implicitně používá UTF-8. Jiná kódování jsou podporována předáním kódovacího řetězce v této volbě."
+msgid ""
+"QSF defaults to UTF-8. Other encodings are supported by passing the encoding "
+"string in this option."
+msgstr ""
+"QSF implicitně používá UTF-8. Jiná kódování jsou podporována předáním "
+"kódovacího řetězce v této volbě."
 
 #: backend/file/qsf-backend.c:152
 msgid "Convert deprecated date values to time values."
 msgstr "Převést zavrhnuté datumové hodnoty na časové hodnoty."
 
 #: backend/file/qsf-backend.c:154
-msgid "Applications that support the new QOF time format need to enable this option to convert older date values into time. Applications that still use date should not set this option until time values are supported."
-msgstr "Programy, které podporují nový QOF časový formát potřebují povolit tuto volbu pro převod starších datumových hodnot na časové. Programy, které stále používají datum by neměli nastavit tuto volbu dokud nebudou podporovat časové hodnoty."
+msgid ""
+"Applications that support the new QOF time format need to enable this option "
+"to convert older date values into time. Applications that still use date "
+"should not set this option until time values are supported."
+msgstr ""
+"Programy, které podporují nový QOF časový formát potřebují povolit tuto "
+"volbu pro převod starších datumových hodnot na časové. Programy, které stále "
+"používají datum by neměli nastavit tuto volbu dokud nebudou podporovat "
+"časové hodnoty."
 
 #: backend/file/qsf-backend.c:246
 #, c-format
-msgid "The selected QSF Object file '%s' requires a map but it was not provided."
-msgstr "Vybraný soubor objektu QSF '%s' vyžaduje mapu, ale ta nebyla poskytnuta."
+msgid ""
+"The selected QSF Object file '%s' requires a map but it was not provided."
+msgstr ""
+"Vybraný soubor objektu QSF '%s' vyžaduje mapu, ale ta nebyla poskytnuta."
 
 #: backend/file/qsf-backend.c:249
 #, c-format
-msgid "When converting XML strings into numbers, an overflow has been detected. The QSF object file '%s' contains invalid data in a field that is meant to hold a number."
-msgstr "Při převodu retězců XML na čísla bylo detekováno přetečení. Soubor objektu QSF '%s' obsahuje neplatná data v poli, které má obsahovat číslo."
+msgid ""
+"When converting XML strings into numbers, an overflow has been detected. The "
+"QSF object file '%s' contains invalid data in a field that is meant to hold "
+"a number."
+msgstr ""
+"Při převodu retězců XML na čísla bylo detekováno přetečení. Soubor objektu "
+"QSF '%s' obsahuje neplatná data v poli, které má obsahovat číslo."
 
 #: backend/file/qsf-backend.c:333
 #, c-format
-msgid "could not write to '%s'. That database may be on a read-only file system, or you may not have write permission for the directory.\n"
-msgstr "Nelze zapisovat do '%s'. Tato databáze je možná na souborovém systému pouze pro čtení, nebo chybí práva zápisu do adresáře.\n"
+msgid ""
+"could not write to '%s'. That database may be on a read-only file system, or "
+"you may not have write permission for the directory.\n"
+msgstr ""
+"Nelze zapisovat do '%s'. Tato databáze je možná na souborovém systému pouze "
+"pro čtení, nebo chybí práva zápisu do adresáře.\n"
 
 #: backend/file/qsf-backend.c:491
 #, c-format
@@ -114,28 +165,47 @@ msgstr "Při čtení souboru '%s' došlo k chybě."
 
 #: backend/file/qsf-backend.c:610
 #, c-format
-msgid "The selected file '%s' is a QSF map and cannot be opened as a QSF object."
+msgid ""
+"The selected file '%s' is a QSF map and cannot be opened as a QSF object."
 msgstr "Vybraný soubor '%s' je mapa QSF a nelze jej otevřít jako QSF objekt."
 
 #: backend/file/qsf-backend.c:1120
 #, c-format
-msgid "Could not write to '%s'. Check that you have permission to write to this file and that there is sufficient space to create it."
-msgstr "Nelze zapisovat do '%s'. Zkontrolujte jestli máte oprávnění pro zápis do tohoto souboru a že na disku je dost místa."
+msgid ""
+"Could not write to '%s'. Check that you have permission to write to this "
+"file and that there is sufficient space to create it."
+msgstr ""
+"Nelze zapisovat do '%s'. Zkontrolujte jestli máte oprávnění pro zápis do "
+"tohoto souboru a že na disku je dost místa."
 
 #: backend/file/qsf-backend.c:1356
 #, c-format
-msgid "The selected QSF object file '%s' contains one or more invalid GUIDs. The file cannot be processed - please check the source of the file and try again."
-msgstr "Vybraný soubor objektu QSF '%s' obsahuje jeden nebo více neplatných GUID. Soubor nemůže být zpracován - zkontrolujte prosím zdroj souboru a zkuste to znovu."
+msgid ""
+"The selected QSF object file '%s' contains one or more invalid GUIDs. The "
+"file cannot be processed - please check the source of the file and try again."
+msgstr ""
+"Vybraný soubor objektu QSF '%s' obsahuje jeden nebo více neplatných GUID. "
+"Soubor nemůže být zpracován - zkontrolujte prosím zdroj souboru a zkuste to "
+"znovu."
 
 #: backend/file/qsf-backend.c:1478
 #, c-format
-msgid "The selected QSF object file '%s' contains one or more invalid 'collect' values. The file cannot be processed - please check the source of the file and try again."
-msgstr "Vybraný soubor objektu QSF '%s' obsahuje jeden nebo více neplatných 'collect' hodnot. Soubor nemůže být zpracován - prosím zkontrolujte zdroj souboru a zkuste to znovu."
+msgid ""
+"The selected QSF object file '%s' contains one or more invalid 'collect' "
+"values. The file cannot be processed - please check the source of the file "
+"and try again."
+msgstr ""
+"Vybraný soubor objektu QSF '%s' obsahuje jeden nebo více neplatných "
+"'collect' hodnot. Soubor nemůže být zpracován - prosím zkontrolujte zdroj "
+"souboru a zkuste to znovu."
 
 #: backend/sqlite/qof-sqlite.c:836
 #, c-format
-msgid "Unable to open the output file '%s' - do you have permission to create this file?"
-msgstr "Nelze otevřít výstupní soubor '%s' - máte oprávnění vytvořit tento soubor?"
+msgid ""
+"Unable to open the output file '%s' - do you have permission to create this "
+"file?"
+msgstr ""
+"Nelze otevřít výstupní soubor '%s' - máte oprávnění vytvořit tento soubor?"
 
 #: backend/sqlite/qof-sqlite.c:868
 #, c-format
@@ -168,8 +238,12 @@ msgstr "Tato kniha je zřejmě již otevřena."
 
 #: qof/qofsession.c:1091
 #, c-format
-msgid "Unable to locate a suitable backend for '%s' - please check you have specified an access method like file: or sqlite:"
-msgstr "Nelze najít odpovídající backend pro '%s' - Zkontrolujte prosím jestli jste specifikoval přístupovou metodu jako file: nebo sqlite:"
+msgid ""
+"Unable to locate a suitable backend for '%s' - please check you have "
+"specified an access method like file: or sqlite:"
+msgstr ""
+"Nelze najít odpovídající backend pro '%s' - Zkontrolujte prosím jestli jste "
+"specifikoval přístupovou metodu jako file: nebo sqlite:"
 
 #: qof/qofsession.c:1328 qof/qofsession.c:1365
 msgid "Failed to load backend, no suitable handler."
@@ -177,6 +251,10 @@ msgstr "Selhalo nahrání backend, nepoužitelný handler."
 
 #: qof/qofsql.c:724 qof/qofsql.c:751
 #, c-format
-msgid "When converting SQLite strings into numbers, an overflow has been detected. The SQLite database '%s' contains invalid data in a field that is meant to hold a number."
-msgstr "Při konverzi SQLite řetězců na čísla bylo detekováno přetečení. Databáze SQLite '%s' obsahuje neplatná data v poli, které má obsahovat číslo."
-
+msgid ""
+"When converting SQLite strings into numbers, an overflow has been detected. "
+"The SQLite database '%s' contains invalid data in a field that is meant to "
+"hold a number."
+msgstr ""
+"Při konverzi SQLite řetězců na čísla bylo detekováno přetečení. Databáze "
+"SQLite '%s' obsahuje neplatná data v poli, které má obsahovat číslo."
