--- a/qof/po/cs.po
+++ b/qof/po/cs.po
@@ -8,10 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-07-06 23:41+0100\n"
+"POT-Creation-Date: 2010-07-27 21:08+0100\n"
 "PO-Revision-Date: 2009-05-16 22:40+0200\n"
 "Last-Translator: Tomas Fidler <tomas.fidler@tiscali.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
