--- a/qof/po/de.po
+++ b/qof/po/de.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-07-06 23:41+0100\n"
+"POT-Creation-Date: 2010-07-27 21:08+0100\n"
 "PO-Revision-Date: 2009-07-03 18:09+0100\n"
 "Last-Translator: Chris Leick <c.leick@vollbio.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -216,8 +217,8 @@ msgid ""
 "Unable to open the output file '%s' - do you have permission to create this "
 "file?"
 msgstr ""
-"Es ist nicht möglich, die Ausgabedatei »%s« zu öffnen - haben Sie die Rechte, "
-"diese Datei zu erstellen?"
+"Es ist nicht möglich, die Ausgabedatei »%s« zu öffnen - haben Sie die "
+"Rechte, diese Datei zu erstellen?"
 
 #: backend/sqlite/qof-sqlite.c:868
 #, c-format
@@ -254,8 +255,8 @@ msgid ""
 "Unable to locate a suitable backend for '%s' - please check you have "
 "specified an access method like file: or sqlite:"
 msgstr ""
-"Es konnte kein passendes Backend für »%s« gefunden werden - bitte prüfen Sie, "
-"ob Sie eine Zugriffsmethode wie file: oder sqlite: angegeben haben"
+"Es konnte kein passendes Backend für »%s« gefunden werden - bitte prüfen "
+"Sie, ob Sie eine Zugriffsmethode wie file: oder sqlite: angegeben haben"
 
 #: qof/qofsession.c:1328 qof/qofsession.c:1365
 msgid "Failed to load backend, no suitable handler."
