--- a/qof/po/fr.po
+++ b/qof/po/fr.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-07-06 23:41+0100\n"
+"POT-Creation-Date: 2010-07-27 21:08+0100\n"
 "PO-Revision-Date: 2009-05-15 21:16+0200\n"
 "Last-Translator: Julien Patriaca <patriarcaj@gmail.com>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0>\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -39,9 +40,9 @@ msgid ""
 "against the QSF object schema. The XML structure of the file is either not "
 "well-formed or the file contains illegal data."
 msgstr ""
-"L'objet QSF est invalide ! La validation du fichier « %s » a échoué au regard "
-"du schéma des objets QSF. La structure XMl du fichier est soit mal formée "
-"soit contient des données incompatibles."
+"L'objet QSF est invalide ! La validation du fichier « %s » a échoué au "
+"regard du schéma des objets QSF. La structure XMl du fichier est soit mal "
+"formée soit contient des données incompatibles."
 
 #: backend/file/qsf-xml-map.c:274
 #, c-format
@@ -203,9 +204,9 @@ msgid ""
 "values. The file cannot be processed - please check the source of the file "
 "and try again."
 msgstr ""
-"L'objet QSF sélectionné « %s » comporte une ou plusieurs valeurs « collecte » "
-"invalides. Le fichier ne peut être traité - veuillez s'il vous plait "
-"vérifier la source et réessayer."
+"L'objet QSF sélectionné « %s » comporte une ou plusieurs valeurs "
+"« collecte » invalides. Le fichier ne peut être traité - veuillez s'il vous "
+"plait vérifier la source et réessayer."
 
 #: backend/sqlite/qof-sqlite.c:836
 #, c-format
