--- a/qof/po/pt.po
+++ b/qof/po/pt.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.8.0-1\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-07-06 23:41+0100\n"
+"POT-Creation-Date: 2010-07-27 21:08+0100\n"
 "PO-Revision-Date: 2009-05-19 21:59+0100\n"
 "Last-Translator: Américo Monteiro <a_monteiro@netcabo.pt>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
