--- a/qof/po/ru.po
+++ b/qof/po/ru.po
@@ -7,16 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.8.0-1\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-07-06 23:41+0100\n"
+"POT-Creation-Date: 2010-07-27 21:08+0100\n"
 "PO-Revision-Date: 2009-05-08 21:22+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: backend/file/qsf-xml-map.c:252 backend/file/qsf-xml-map.c:333
 #: backend/file/qsf-xml.c:254 backend/file/qsf-xml.c:310
