--- a/qof/po/sv.po
+++ b/qof/po/sv.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.7.2\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-07-06 23:41+0100\n"
+"POT-Creation-Date: 2010-07-27 21:08+0100\n"
 "PO-Revision-Date: 2006-09-28 17:54+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
