--- a/qof/po/vi.po
+++ b/qof/po/vi.po
@@ -6,10 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.7.2\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-07-06 23:41+0100\n"
+"POT-Creation-Date: 2010-07-27 21:08+0100\n"
 "PO-Revision-Date: 2006-09-30 22:14+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -179,8 +180,8 @@ msgid ""
 "Could not write to '%s'. Check that you have permission to write to this "
 "file and that there is sufficient space to create it."
 msgstr ""
-"Không thể ghi vào « %s ». Hãy kiểm tra bạn có quyền ghi vào tập tin này, cũng "
-"có đủ sức chứa rảnh để tạo nó."
+"Không thể ghi vào « %s ». Hãy kiểm tra bạn có quyền ghi vào tập tin này, "
+"cũng có đủ sức chứa rảnh để tạo nó."
 
 #: backend/file/qsf-backend.c:1356
 #, c-format
@@ -258,8 +259,8 @@ msgid ""
 "The SQLite database '%s' contains invalid data in a field that is meant to "
 "hold a number."
 msgstr ""
-"Tràn khi chuyển đổi chuỗi SQLite sang số. Cơ sở dữ liệu SQLite « %s » chứa dữ "
-"liệu không hợp lệ trong trường nên chứa số."
+"Tràn khi chuyển đổi chuỗi SQLite sang số. Cơ sở dữ liệu SQLite « %s » chứa "
+"dữ liệu không hợp lệ trong trường nên chứa số."
 
 #, fuzzy
 #~ msgid "GDA Provider '%s' could not be found"
