--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2014-08-30  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* m4/gettext.m4: Upgrade to gettext-0.19.2.
+	* m4/iconv.m4: Upgrade to gettext-0.19.2.
+	* m4/lib-ld.m4: Upgrade to gettext-0.19.2.
+	* m4/lib-link.m4: Upgrade to gettext-0.19.2.
+	* m4/lib-prefix.m4: Upgrade to gettext-0.19.2.
+	* m4/nls.m4: Upgrade to gettext-0.19.2.
+	* m4/po.m4: Upgrade to gettext-0.19.2.
+	* m4/progtest.m4: Upgrade to gettext-0.19.2.
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.2.
+
 2012-05-29  Neil Williams  <linux@codehelp.co.uk>
 
 	* Apply patch by Ulrich Drepper <drepper@gmail.com>
