--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2014-08-30  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.19.2.
+	* Rules-quot: Upgrade to gettext-0.19.2.
+
 2009-11-13  Vincenzo Campanella <vinz65@gmail.com>
 
 	* LINGUAS: Add it.
